--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches: [ master ]
   pull_request:
+    types: [ opened, closed ]
     branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
