--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    types: [ opened, closed ]
+    types: [ opened, edited, closed ]
     branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
